# glossa

./: .gitignore  Cargo.toml  Fluent.md  Readme-zh.md  Readme.md
assets/: git-subtree.md
assets/l10n/: readme.md
assets/l10n/af/: error.yaml
assets/l10n/am/: error.yaml
assets/l10n/ar/: error.yaml
assets/l10n/az/: error.yaml
assets/l10n/be/: error.yaml
assets/l10n/bg/: error.yaml
assets/l10n/bn/: error.yaml
assets/l10n/ca/: error.yaml
assets/l10n/ceb/: error.yaml
assets/l10n/co/: error.yaml
assets/l10n/cs/: error.yaml
assets/l10n/cy/: error.yaml
assets/l10n/da/: error.yaml
assets/l10n/de/: error.yaml
assets/l10n/el/: error.yaml
assets/l10n/en/: error.yaml  test.yml
assets/l10n/en-GB/: error.yaml
assets/l10n/eo/: error.yaml
assets/l10n/es/: error.yaml
assets/l10n/et/: error.yaml
assets/l10n/eu/: error.yaml
assets/l10n/fa/: error.yaml
assets/l10n/fi/: error.yaml
assets/l10n/fr/: error.yaml
assets/l10n/fy/: error.yaml
assets/l10n/ga/: error.yaml
assets/l10n/gd/: error.yaml
assets/l10n/gl/: error.yaml
assets/l10n/gu/: error.yaml
assets/l10n/ha/: error.yaml
assets/l10n/haw/: error.yaml
assets/l10n/he/: error.yaml
assets/l10n/hi/: error.yaml
assets/l10n/hr/: error.yaml
assets/l10n/ht/: error.yaml
assets/l10n/hu/: error.yaml
assets/l10n/hy/: error.yaml
assets/l10n/id/: error.yaml
assets/l10n/ig/: error.yaml
assets/l10n/is/: error.yaml
assets/l10n/it/: error.yaml
assets/l10n/ja/: error.yaml
assets/l10n/jw/: error.yaml
assets/l10n/ka/: error.yaml
assets/l10n/kk/: error.yaml
assets/l10n/km/: error.yaml
assets/l10n/kn/: error.yaml
assets/l10n/ko/: error.yaml
assets/l10n/ku/: error.yaml
assets/l10n/ky/: error.yaml
assets/l10n/la/: error.yaml
assets/l10n/lb/: error.yaml
assets/l10n/lo/: error.yaml
assets/l10n/lt/: error.yaml
assets/l10n/lv/: error.yaml
assets/l10n/mg/: error.yaml
assets/l10n/mi/: error.yaml
assets/l10n/mk/: error.yaml
assets/l10n/ml/: error.yaml
assets/l10n/mn/: error.yaml
assets/l10n/mr/: error.yaml
assets/l10n/ms/: error.yaml
assets/l10n/mt/: error.yaml
assets/l10n/my/: error.yaml
assets/l10n/ne/: error.yaml
assets/l10n/nl/: error.yaml
assets/l10n/no/: error.yaml
assets/l10n/ny/: error.yaml
assets/l10n/or/: error.yaml
assets/l10n/pa/: error.yaml
assets/l10n/pl/: error.yaml
assets/l10n/ps/: error.yaml
assets/l10n/pt/: error.yaml
assets/l10n/ro/: error.yaml
assets/l10n/ru/: error.yaml
assets/l10n/sd/: error.yaml
assets/l10n/si/: error.yaml
assets/l10n/sk/: error.yaml
assets/l10n/sl/: error.yaml
assets/l10n/sm/: error.yaml
assets/l10n/sn/: error.yaml
assets/l10n/so/: error.yaml
assets/l10n/sq/: error.yaml
assets/l10n/sr/: error.yaml
assets/l10n/st/: error.yaml
assets/l10n/su/: error.yaml
assets/l10n/sv/: error.yaml
assets/l10n/sw/: error.yaml
assets/l10n/ta/: error.yaml
assets/l10n/te/: error.yaml
assets/l10n/tg/: error.yaml
assets/l10n/th/: error.yaml
assets/l10n/tl/: error.yaml
assets/l10n/tr/: error.yaml
assets/l10n/ug/: error.yaml
assets/l10n/uk/: error.yaml
assets/l10n/ur/: error.yaml
assets/l10n/uz/: error.yaml
assets/l10n/vi/: error.yaml
assets/l10n/xh/: error.yaml
assets/l10n/yi/: error.yaml
assets/l10n/yo/: error.yaml
assets/l10n/zh/: error.yaml  test.yml
assets/l10n/zh-Hant/: error.yaml
assets/l10n/zu/: error.yaml
assets/theme/ayu/: ayu-dark.tmTheme
assets/theme/sublime-monokai-extended/: Monokai Extended Bright.tmTheme
codegen/: Cargo.toml
codegen/assets/syntect/: readme.md
codegen/src/: consts.rs  conversion.rs  create.rs  header.rs  highlight.rs  lib.rs  map_writer.rs  prelude.rs  version.rs
codegen/src/deser/: data_map.rs  locale.rs  mod.rs  run.rs
codegen/src/generator/: deser.rs  from.rs  header.rs  map_writer.rs  mod.rs
codegen/src/highlight/: mod.rs  output.rs  syntax.rs  theme.rs
glossa/: Cargo.toml  build.rs
glossa/src/: error.rs  fallback.rs  l10n.rs  lib.rs  log.rs
glossa/src/assets/: localisation.rs  mod.rs
glossa/src/fluent/: deref.rs  fallback.rs  find.rs  from.rs  loader.rs  mod.rs
glossa/src/map_loader/: from.rs  get.rs  mod.rs  traits.rs
src/: error.rs  lib.rs
src/resource/: deref.rs  fallback.rs  find.rs  from.rs  loader.rs  mod.rs
