[package]
name = "glossa"
version = "0.0.1-alpha.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
readme = "Readme.md"
repository = "https://github.com/2moe/glossa"
description = "A language localisation library"

[dependencies]
lang-id = "0.0.1-alpha.4"
fluent-templates = "0.8.0"
once_cell = "1.17.1"
thiserror = "1.0.40"
getset = "0.1.2"
# ahash = "0.8.3"
# parking_lot = "0.12.1"

[dev-dependencies]
anyhow = "1.0.70"

[package.metadata.docs.rs]
# all-features = true
targets = ["x86_64-unknown-linux-gnu"]
