[package]
name = "glossa-codegen"
version = "0.0.1-alpha.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
readme = "../Readme.md"
repository = "https://github.com/2moe/glossa"
description = "Generate const language localisation map for code at compile time"

[lib]
path = "src/lib.rs"

[features]
# default = ["yaml", "ron", "toml", "json"]
default = ["yaml"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
ron = ["dep:ron"]
toml = ["dep:toml"]

[dependencies]
lang-id = { version = "0.0.1-beta.2", features = ["map"] }
# lang-id = { path = "../../lang-id", features = ["map"] }
phf = { version = "0.11" }
phf_codegen = { version = "0.11" }
ron = { version = "0.8.0", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", optional = true }
serde_yaml = { version = "0.9.19", optional = true }
toml = { version = "0.7.3", optional = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
