[package]
name = "glossa-codegen"
version = "0.0.1-alpha.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
# readme = "Readme.md"
repository = "https://github.com/2moe/glossa"
description = "Generate const language localisation map for code at compile time"

[lib]
path = "src/lib.rs"

[features]
# default = ["yaml", "ron", "toml", "json", "highlight"]
default = ["yaml"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
ron = ["dep:ron"]
toml = ["dep:toml"]
highlight = ["dep:syntect"]

[dependencies]
lang-id = { version = "0.0.1-beta.3", features = ["map"] }
# lang-id = { path = "../../lang-id", features = ["map"] }
phf = { version = "0.11.1" }
phf_codegen = { version = "0.11.1" }
ron = { version = "0.8.0", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
toml = { version = "0.7.3", optional = true }
getset = "0.1.2"
log = "0.4.17"
once_cell = "1.17.1"

[dependencies.syntect]
version = "5.0.0"
default-features = false
optional = true
features = ["parsing", "regex-fancy"]


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
