[package]
name = "glossa-codegen"
version = "0.0.1-alpha.5"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
# readme = "Readme.md"
repository = "https://github.com/2moe/glossa"
description = "Generate const language localisation map for code at compile time"

# [lib]
# path = "src/lib.rs"

[features]
# default = ["yaml", "ron", "toml", "json", "highlight"]
default = ["yaml", "highlight"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
ron = ["dep:ron"]
toml = ["dep:toml"]
highlight = ["dep:hlight"]

[dependencies]
lang-id = { version = "0.0.1-beta.3", features = ["map"] }
# lang-id = { path = "../../lang-id", features = ["map"] }
phf = { version = "0.11.1" }
phf_codegen = { version = "0.11.1" }
ron = { version = "0.8.0", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
toml = { version = "0.7.4", optional = true }
getset = "0.1.2"
log = "0.4.18"
once_cell = "1.17.2"

[dependencies.hlight]
version = "0.0.1-alpha.1"
# path = "../../hlight/hlight"
optional = true


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
