[package]
name = "glossa"
version = "0.0.1-alpha.10"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
readme = "../Readme.md"
repository = "https://github.com/2moe/glossa"
description = "A language localisation library"

[lib]
path = "src/lib.rs"

[features]
# default = ["log", "fluent", "ahash"]
default = ["log", "ahash"]
log = ["dep:log"]
fluent = ["dep:fluent-templates"]
ahash = ["dep:ahash"]

[dependencies]
# lang-id = { path = "../../lang-id" }
lang-id = "0.0.1-beta.3"
fluent-templates = { version = "0.8.0", optional = true }
once_cell = "1.17.1"
thiserror = "1.0.40"
getset = "0.1.2"
log = { version = "0.4.18", optional = true }
phf = "0.11.1"
ahash = { version = "0.8.3", optional = true }

[dev-dependencies]
anyhow = "1.0.71"
env_logger = { version = "0.10.0", default-features = false, features = [
    "humantime",
    "auto-color",
] }

[build-dependencies]
# glossa-codegen = { path = "../codegen" }
glossa-codegen = "0.0.1-alpha.4"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "__glossa_doc"]
